[package]
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2021"
license = "MIT OR APACHE"
name = "mqtt-zenoh-relay"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/zenoh-fun"
version = "0.1.0"

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]}
rumqttc = "0.22.0"
thiserror = "1.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "fs"]}
zenoh = "0.7.2-rc"

# utilities
clap = {version = "4.3", features = ["derive"]}
config = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"

# logging
tracing = {version = "0.1", features = ["log"]}
tracing-logfmt = "0.3"
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}
