[package]
authors = ["David Weis <dweis7@gmail.com>"]
description = "Relay MQTT messages to Zenoh"
edition = "2021"
license = "MIT OR APACHE"
name = "mqtt-zenoh-relay"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/mqtt-zenoh-relay"
version = "0.1.3"

# Debian package

[package.metadata.deb]
assets = [
  [
    "target/release/mqtt-zenoh-relay",
    "/usr/bin/",
    "755",
  ],
  [
    "configuration/settings.yaml",
    "/etc/mqtt_zenoh_relay/settings.yaml",
    "644",
  ],
]
conf-files = ["/etc/mqtt_zenoh_relay/settings.yaml"]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]}
flume = "0.10"
rumqttc = "0.22.0"
thiserror = "1.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "fs"]}
zenoh = "0.7.2-rc"

# utilities
clap = {version = "4.3", features = ["derive"]}
config = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"

# logging
tracing = {version = "0.1", features = ["log"]}
tracing-logfmt = "0.3"
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}
